--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -13,7 +13,7 @@
     }
 
     nav {
-        display: grid;
+        display: flex;
         grid-auto-flow: column;
         gap: 10px;
         width: max-content;
