--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,25 +1,60 @@
 header {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
     padding: 20px;
     background-color: $color-header;
-
+}
     .logo {
-    max-width: 400px; 
+    max-width: 400px;
     height: auto;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
 }
 
     nav {
+    position: relative;
+    }
+
     .menu {
         list-style: none;
         display: flex;
-        flex-direction: row; 
+        flex-direction: column;
         gap: 10px;
         margin: 0;
         padding: 0;
+    }
+    li {
+        a {
+        text-decoration: none;
+        color: $color-link;
+        font-weight: bold;
+        padding: 10px 20px;
+        border-radius: 5px;
+        background-color: #1a1919;
+        transition: opacity 0.3s;
 
+        &:hover {
+            background-color: #000000;
+            }
+        }
+    }
+
+    .active {
+        display: flex;
+    }
+@media (max-width: 768px) {
+    header {
+    nav {
+    .menu {
+        .menu {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        background-color: #111;
+        width: 100%;
+        padding: 10px;
+        }
+    }
         li {
         a {
             text-decoration: none;
