--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -10,50 +10,18 @@ header {
     height: auto;
     margin-bottom: 20px;
 }
-
-    nav {
-    position: relative;
-    }
-
-    .menu {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin: 0;
-        padding: 0;
-    }
-    li {
-        a {
-        text-decoration: none;
-        color: $color-link;
-        font-weight: bold;
-        padding: 10px 20px;
-        border-radius: 5px;
-        background-color: #1a1919;
-        transition: opacity 0.3s;
-
-        &:hover {
-            background-color: #000000;
-            }
-        }
-    }
-
-    .active {
-        display: flex;
-    }
-@media (max-width: 768px) {
     header {
     nav {
-    .menu {
+    
         .menu {
-        flex-direction: column;
+        list-style: none;
+        display: flex;
+        flex-direction: row;
         align-items: center;
         gap: 10px;
         background-color: #111;
         width: 100%;
-        padding: 10px;
-        }
+        padding: 0;
     }
         li {
         a {
@@ -72,7 +40,7 @@ header {
         }
     }
     }
-}
+
 
 footer {
     grid-template-columns: repeat(4, 1fr);
@@ -133,5 +101,10 @@ footer {
             }
         }
         }
+    }
+}
+@mixin mobile {
+    @media screen and (min-width: 375px) and (max-width: 767px) {
+        @content;
     }
 }
