--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -291,7 +291,7 @@ footer .social-icons a img:hover {
   header {
     flex-direction: column;
     align-items: center;
-    padding: 15px 10px;
+    padding: 10px;
     text-align: center;
   }
   header .logo {
