--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -10,10 +10,41 @@ header {
     height: auto;
     margin-bottom: 20px;
 }
+
+    nav {
+    position: relative;
+    }
+        .menu {
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            margin: 0;
+            padding: 0;
+    }
+    li {
+        a {
+        text-decoration: none;
+        color: $color-link;
+        font-weight: bold;
+        padding: 10px 20px;
+        border-radius: 5px;
+        background-color: #1a1919;
+        transition: opacity 0.3s;
+
+        &:hover {
+            background-color: #000000;
+            }
+        }
+    }
+
+    .active {
+        display: flex;
+    }
+@media (max-width: 768px) {
     header {
     nav {
-    
-        .menu {
+    .menu {
         list-style: none;
         display: flex;
         flex-direction: row;
@@ -40,7 +71,7 @@ header {
         }
     }
     }
-
+}
 
 footer {
     grid-template-columns: repeat(4, 1fr);
